<resources>
    <string name="app_name">iSick</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="titel_sjukanmäla">Sjukanmäla</string>
    <string name="title_historik">Historik</string>
    <string name="title_inställningar">Inställningar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_logopicture">logopicture</string>
    <string name="hint_personnummer">ååmmdd-xxxx</string>
    <string name="label_vab">VAB</string>
    <string name="label_skicka">Skicka</string>
    <string name="label_logga_in">Logga in</string>
    <string name="hint_email">email</string>
    <string name="hint_password">lösenord</string>
    <string name="label_klar">Klar</string>
    <string name="label_anmält_till_fk">Anmält till FK</string>
    <string name="string_sjuk">%S - Sjuk</string>
    <string name="string_vab">%S - VAB</string>
    <string name="string_workpercent">Närvaro:\n%S%%</string>
    <string name="string_sickpercent">Sjuk:\n%S%%</string>
    <string name="string_vabpercent">VAB:\n%S%%</string>
    <string name="label_sign_out">Logga ut</string>
    <string name="label_email_till_sjukansvarig">email till sjukansvarig:</string>
    <string name="label_barn">barn:</string>
    <string name="label_add_kid">Lägg till barn</string>
    <string name="label_pushnotifikation">pushnotifikation:</string>
    <string name="label_påminnelse">Påminnelse klockan %S dagen efter</string>
    <string name="label_tillbaka">Tillbaka</string>
    <string name="label_radera">Radera</string>
    <string name="hint_name"><![CDATA[för-& efternamn]]></string>
    <string name="hint_email_till_sjukansvarig">email till sjukansvarig</string>
    <string name="sickmail">%S\n\nHej,\n\n%S, %S, är sjuk idag.\n\nSkickat via\niSick\n\'\appen för snabb frånvaroanmälan\'\.</string>
    <string name="vabmail">%S\n\nHej,\n\n%S, %S, är hemma med sjukt barn idag.\n\nSkickat via\niSick\n\'\appen för snabb frånvaroanmälan\'\.</string>
    <string name="label_registrera">Till registrering</string>
    <string name="hint_repeat_password">återupprepa lösenord</string>
    <string name="hint_namn"><![CDATA[för-& efternamn]]></string>
    <string name="hint_email_to">email till sjukansvarig</string>
    <string name="label_tillbaka_till_loggain">Tillbaka till login</string>
    <string name="label_register">Registrera</string>
    <string-array name="months">
        <item>Januari</item>
        <item>Februari</item>
        <item>Mars</item>
        <item>April</item>
        <item>Maj</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Augusti</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
