<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.galvend.isick.EditAddKid">

    <EditText
        android:id="@+id/kidNameTF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kidEmailTF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/hint_email_till_sjukansvarig"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kidNameTF" />

    <EditText
        android:id="@+id/kidPersonNummerTF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/hint_personnummer"
        android:inputType="number"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kidEmailTF" />

    <Button
        android:id="@+id/backFromEditKidButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_tillbaka"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteKidButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kidPersonNummerTF" />

    <Button
        android:id="@+id/deleteKidButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_radera"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/purple"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/doneEditKidButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backFromEditKidButton"
        app:layout_constraintTop_toBottomOf="@+id/kidPersonNummerTF" />

    <Button
        android:id="@+id/doneEditKidButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_klar"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/deleteKidButton"
        app:layout_constraintTop_toBottomOf="@+id/kidPersonNummerTF" />

    <ImageView
        android:id="@+id/personNumberCheck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/kidPersonNummerTF"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kidPersonNummerTF"
        app:srcCompat="@drawable/ic_check_circle_black_24dp" />

    <ImageView
        android:id="@+id/emailCheck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/kidEmailTF"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/kidEmailTF"
        app:layout_constraintTop_toTopOf="@+id/kidEmailTF"
        app:srcCompat="@drawable/ic_check_circle_black_24dp" />

    <ImageView
        android:id="@+id/nameCheck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/kidNameTF"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/kidNameTF"
        app:layout_constraintTop_toTopOf="@+id/kidNameTF"
        app:srcCompat="@drawable/ic_check_circle_black_24dp" />

</android.support.constraint.ConstraintLayout>
