<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.galvend.isick.reportfragment.ReportFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_logopicture"
        android:src="@drawable/sicklogga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"
        tools:text="Dennis Galvén" />

    <EditText
        android:id="@+id/prsnrTF"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/hint_personnummer"
        android:inputType="number"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <Switch
        android:id="@+id/vabSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:fontFamily="@font/raleway"
        android:textAlignment="textStart"
        android:textColorLink="@color/colorPrimary"
        android:trackTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prsnrTF"
        tools:checked="false" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_vab"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/vabSwitch"
        app:layout_constraintEnd_toStartOf="@+id/vabSwitch"
        app:layout_constraintTop_toTopOf="@+id/vabSwitch" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/kidRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vabSwitch"
        tools:listitem="@layout/kidrecyclercell" />

    <Button
        android:id="@+id/sendButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_skicka"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kidRecycler" />

    <ImageView
        android:id="@+id/checkUserPersonNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_check_circle_black_24dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@+id/prsnrTF"
        app:layout_constraintEnd_toEndOf="@+id/prsnrTF"
        app:layout_constraintTop_toTopOf="@+id/prsnrTF" />
</android.support.constraint.ConstraintLayout>
