<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.galvend.isick.settingsfragment.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/settingsLogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_logopicture"
        android:src="@drawable/sicklogga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signOutButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_sign_out"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/editNameButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circular_progress_bar"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsNameTF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settingsNameTF" />

    <ImageButton
        android:id="@+id/editMailButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circular_progress_bar"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsEmailTF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settingsEmailTF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_email_till_sjukansvarig"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsNameTF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_barn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsEmailTF" />

    <EditText
        android:id="@+id/settingsNameTF"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editNameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLogo"
        tools:text="Dennis Galvén" />

    <EditText
        android:id="@+id/settingsEmailTF"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editMailButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="dennis.galven@gmail.com" />
</android.support.constraint.ConstraintLayout>
